@@ -1,3 +1,5 @@
+Fix CategoryTool_constructCategoryTableToExport. Sometimes categories were wrongly sorted and incorrect category definitions were exported.
+
 2011-02-25 arnaud.fontaine
 * Proxify all the fields in BaseType_view and PreferenceType_view.
 * Fix type_interface_list which was not displayed properly in BaseType_view and PreferenceType_view.
